lib/VisLangParser.js
// Generated from ./grammar/VisLang.g4 by ANTLR 4.12.0
// jshint ignore: start
import antlr4 from 'antlr4';
import VisLangVisitor from './VisLangVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class VisLangParser extends antlr4.Parser {

    static grammarFileName = "VisLang.g4";
    static literalNames = [ null, "'('", "')'", "'{'", "'}'", "','", "':'", 
                            "';'", "'!'", "'*'", "'/'", "'%'", "'+'", "'-'", 
                            "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
                            "'='", "'+='", "'-='", "'*='", "'/='", "'%='", 
                            "'fun'", "'if'", "'else'", "'for'", "'do'", 
                            "'while'", "'print'", "'println'", "'return'", 
                            "'in'", "'and'", "'or'", "'null'" ];
    static symbolicNames = [ null, "Lparen", "Rparen", "Lbrace", "Rbrace", 
                             "Comma", "Colon", "Semicolon", "Not", "Mul", 
                             "Div", "Mod", "Add", "Sub", "Langle", "Rangle", 
                             "Leq", "Req", "Eqeq", "Neq", "Assign", "Add_Assign", 
                             "Sub_Assign", "Mul_Assign", "Div_Assign", "Mod_Assign", 
                             "Fun", "If", "Else", "For", "Do", "While", 
                             "Print", "Println", "Return", "In", "And", 
                             "Or", "Null", "Boolean", "String", "Integer", 
                             "Double", "Comment", "Identifier", "Whitespace" ];
    static ruleNames = [ "program", "body", "declaration", "funDecl", "params", 
                         "statement", "ifStatement", "ifStat", "elifStat", 
                         "elseStat", "doWhileStat", "whileStat", "forStat", 
                         "callStat", "printCall", "funCall", "block", "returnStatement", 
                         "expr", "assignment" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = VisLangParser.ruleNames;
        this.literalNames = VisLangParser.literalNames;
        this.symbolicNames = VisLangParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 18:
    	    		return this.expr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 15);
    		case 1:
    			return this.precpred(this._ctx, 14);
    		case 2:
    			return this.precpred(this._ctx, 13);
    		case 3:
    			return this.precpred(this._ctx, 12);
    		case 4:
    			return this.precpred(this._ctx, 11);
    		case 5:
    			return this.precpred(this._ctx, 10);
    		case 6:
    			return this.precpred(this._ctx, 9);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, VisLangParser.RULE_program);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 40;
	        this.body();
	        this.state = 41;
	        this.match(VisLangParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	body() {
	    let localctx = new BodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, VisLangParser.RULE_body);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 48; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 48;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 43;
	                this.statement();
	                break;

	            case 2:
	                this.state = 44;
	                this.declaration();
	                break;

	            case 3:
	                this.state = 45;
	                this.expr(0);
	                this.state = 46;
	                this.match(VisLangParser.Semicolon);
	                break;

	            }
	            this.state = 50; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 3959431426) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 6083) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	declaration() {
	    let localctx = new DeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, VisLangParser.RULE_declaration);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 52;
	        this.funDecl();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funDecl() {
	    let localctx = new FunDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, VisLangParser.RULE_funDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 54;
	        this.match(VisLangParser.Fun);
	        this.state = 55;
	        this.match(VisLangParser.Identifier);
	        this.state = 56;
	        this.match(VisLangParser.Lparen);
	        this.state = 58;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 8450) !== 0) || ((((_la - 38)) & ~0x1f) === 0 && ((1 << (_la - 38)) & 95) !== 0)) {
	            this.state = 57;
	            this.params();
	        }

	        this.state = 60;
	        this.match(VisLangParser.Rparen);
	        this.state = 61;
	        this.match(VisLangParser.Lbrace);
	        this.state = 62;
	        this.block();
	        this.state = 63;
	        this.match(VisLangParser.Rbrace);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	params() {
	    let localctx = new ParamsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, VisLangParser.RULE_params);
	    try {
	        this.state = 81;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 65;
	            this.match(VisLangParser.Identifier);
	            this.state = 70;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
	            while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1+1) {
	                    this.state = 66;
	                    this.match(VisLangParser.Comma);
	                    this.state = 67;
	                    this.match(VisLangParser.Identifier); 
	                }
	                this.state = 72;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
	            }

	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 73;
	            this.expr(0);
	            this.state = 78;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
	            while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1+1) {
	                    this.state = 74;
	                    this.match(VisLangParser.Comma);
	                    this.state = 75;
	                    this.expr(0); 
	                }
	                this.state = 80;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
	            }

	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, VisLangParser.RULE_statement);
	    try {
	        this.state = 93;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 83;
	            this.assignment();
	            this.state = 84;
	            this.match(VisLangParser.Semicolon);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 86;
	            this.ifStatement();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 87;
	            this.doWhileStat();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 88;
	            this.whileStat();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 89;
	            this.forStat();
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 90;
	            this.callStat();
	            this.state = 91;
	            this.match(VisLangParser.Semicolon);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifStatement() {
	    let localctx = new IfStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, VisLangParser.RULE_ifStatement);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 95;
	        this.ifStat();
	        this.state = 99;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
	        while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1+1) {
	                this.state = 96;
	                this.elifStat(); 
	            }
	            this.state = 101;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
	        }

	        this.state = 103;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===28) {
	            this.state = 102;
	            this.elseStat();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifStat() {
	    let localctx = new IfStatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, VisLangParser.RULE_ifStat);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 105;
	        this.match(VisLangParser.If);
	        this.state = 106;
	        this.match(VisLangParser.Lparen);
	        this.state = 107;
	        this.expr(0);
	        this.state = 108;
	        this.match(VisLangParser.Rparen);
	        this.state = 109;
	        this.match(VisLangParser.Lbrace);
	        this.state = 110;
	        this.block();
	        this.state = 111;
	        this.match(VisLangParser.Rbrace);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elifStat() {
	    let localctx = new ElifStatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, VisLangParser.RULE_elifStat);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 113;
	        this.match(VisLangParser.Else);
	        this.state = 114;
	        this.match(VisLangParser.If);
	        this.state = 115;
	        this.match(VisLangParser.Lparen);
	        this.state = 116;
	        this.expr(0);
	        this.state = 117;
	        this.match(VisLangParser.Rparen);
	        this.state = 118;
	        this.match(VisLangParser.Lbrace);
	        this.state = 119;
	        this.block();
	        this.state = 120;
	        this.match(VisLangParser.Rbrace);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elseStat() {
	    let localctx = new ElseStatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, VisLangParser.RULE_elseStat);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 122;
	        this.match(VisLangParser.Else);
	        this.state = 123;
	        this.match(VisLangParser.Lbrace);
	        this.state = 124;
	        this.block();
	        this.state = 125;
	        this.match(VisLangParser.Rbrace);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	doWhileStat() {
	    let localctx = new DoWhileStatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, VisLangParser.RULE_doWhileStat);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 127;
	        this.match(VisLangParser.Do);
	        this.state = 128;
	        this.match(VisLangParser.Lbrace);
	        this.state = 129;
	        this.block();
	        this.state = 130;
	        this.match(VisLangParser.Rbrace);
	        this.state = 131;
	        this.match(VisLangParser.While);
	        this.state = 132;
	        this.match(VisLangParser.Lparen);
	        this.state = 133;
	        this.expr(0);
	        this.state = 134;
	        this.match(VisLangParser.Rparen);
	        this.state = 135;
	        this.match(VisLangParser.Semicolon);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	whileStat() {
	    let localctx = new WhileStatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, VisLangParser.RULE_whileStat);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 137;
	        this.match(VisLangParser.While);
	        this.state = 138;
	        this.match(VisLangParser.Lparen);
	        this.state = 139;
	        this.expr(0);
	        this.state = 140;
	        this.match(VisLangParser.Rparen);
	        this.state = 141;
	        this.match(VisLangParser.Lbrace);
	        this.state = 142;
	        this.block();
	        this.state = 143;
	        this.match(VisLangParser.Rbrace);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	forStat() {
	    let localctx = new ForStatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, VisLangParser.RULE_forStat);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 145;
	        this.match(VisLangParser.For);
	        this.state = 146;
	        this.match(VisLangParser.Lparen);
	        this.state = 150;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 147;
	            localctx.leftass = this.assignment();
	            break;

	        case 2:
	            this.state = 148;
	            localctx.leftident = this.match(VisLangParser.Identifier);
	            break;

	        case 3:
	            this.state = 149;
	            localctx.leftint = this.match(VisLangParser.Integer);
	            break;

	        }
	        this.state = 152;
	        this.match(VisLangParser.In);
	        this.state = 155;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 44:
	            this.state = 153;
	            localctx.rightident = this.match(VisLangParser.Identifier);
	            break;
	        case 41:
	            this.state = 154;
	            localctx.rightint = this.match(VisLangParser.Integer);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 157;
	        this.match(VisLangParser.Rparen);
	        this.state = 158;
	        this.match(VisLangParser.Lbrace);
	        this.state = 159;
	        this.block();
	        this.state = 160;
	        this.match(VisLangParser.Rbrace);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	callStat() {
	    let localctx = new CallStatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, VisLangParser.RULE_callStat);
	    try {
	        this.state = 164;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 32:
	        case 33:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 162;
	            this.printCall();
	            break;
	        case 44:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 163;
	            this.funCall();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	printCall() {
	    let localctx = new PrintCallContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, VisLangParser.RULE_printCall);
	    var _la = 0;
	    try {
	        this.state = 178;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 32:
	            localctx = new PrintContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 166;
	            this.match(VisLangParser.Print);
	            this.state = 167;
	            this.match(VisLangParser.Lparen);
	            this.state = 169;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) === 0 && ((1 << _la) & 8450) !== 0) || ((((_la - 38)) & ~0x1f) === 0 && ((1 << (_la - 38)) & 95) !== 0)) {
	                this.state = 168;
	                this.expr(0);
	            }

	            this.state = 171;
	            this.match(VisLangParser.Rparen);
	            break;
	        case 33:
	            localctx = new PrintlnContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 172;
	            this.match(VisLangParser.Println);
	            this.state = 173;
	            this.match(VisLangParser.Lparen);
	            this.state = 175;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) === 0 && ((1 << _la) & 8450) !== 0) || ((((_la - 38)) & ~0x1f) === 0 && ((1 << (_la - 38)) & 95) !== 0)) {
	                this.state = 174;
	                this.expr(0);
	            }

	            this.state = 177;
	            this.match(VisLangParser.Rparen);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funCall() {
	    let localctx = new FunCallContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, VisLangParser.RULE_funCall);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 180;
	        this.match(VisLangParser.Identifier);
	        this.state = 181;
	        this.match(VisLangParser.Lparen);
	        this.state = 183;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 8450) !== 0) || ((((_la - 38)) & ~0x1f) === 0 && ((1 << (_la - 38)) & 95) !== 0)) {
	            this.state = 182;
	            this.params();
	        }

	        this.state = 185;
	        this.match(VisLangParser.Rparen);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	block() {
	    let localctx = new BlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, VisLangParser.RULE_block);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 193;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 3892322562) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 6083) !== 0)) {
	            this.state = 191;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,16,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 187;
	                this.expr(0);
	                this.state = 188;
	                this.match(VisLangParser.Semicolon);
	                break;

	            case 2:
	                this.state = 190;
	                this.statement();
	                break;

	            }
	            this.state = 195;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 197;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===34) {
	            this.state = 196;
	            this.returnStatement();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	returnStatement() {
	    let localctx = new ReturnStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, VisLangParser.RULE_returnStatement);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 199;
	        this.match(VisLangParser.Return);
	        this.state = 200;
	        this.expr(0);
	        this.state = 201;
	        this.match(VisLangParser.Semicolon);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expr(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExprContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 36;
	    this.enterRecursionRule(localctx, 36, VisLangParser.RULE_expr, _p);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 219;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,19,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new UnaryNotContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 204;
	            this.match(VisLangParser.Not);
	            this.state = 205;
	            this.expr(17);
	            break;

	        case 2:
	            localctx = new UnaryMinContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 206;
	            this.match(VisLangParser.Sub);
	            this.state = 207;
	            this.expr(16);
	            break;

	        case 3:
	            localctx = new IntLiteralContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 208;
	            this.match(VisLangParser.Integer);
	            break;

	        case 4:
	            localctx = new DoubleLiteralContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 209;
	            this.match(VisLangParser.Double);
	            break;

	        case 5:
	            localctx = new StringLiteralContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 210;
	            this.match(VisLangParser.String);
	            break;

	        case 6:
	            localctx = new BooleanLiteralContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 211;
	            this.match(VisLangParser.Boolean);
	            break;

	        case 7:
	            localctx = new IdentifierContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 212;
	            this.match(VisLangParser.Identifier);
	            break;

	        case 8:
	            localctx = new NullContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 213;
	            this.match(VisLangParser.Null);
	            break;

	        case 9:
	            localctx = new GroupingsContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 214;
	            this.match(VisLangParser.Lparen);
	            this.state = 215;
	            this.expr(0);
	            this.state = 216;
	            this.match(VisLangParser.Rparen);
	            break;

	        case 10:
	            localctx = new FunCallExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 218;
	            this.funCall();
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 244;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,21,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 242;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,20,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new BinaryMulContext(this, new ExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, VisLangParser.RULE_expr);
	                    this.state = 221;
	                    if (!( this.precpred(this._ctx, 15))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 15)");
	                    }
	                    this.state = 222;
	                    localctx.op = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 3584) !== 0))) {
	                        localctx.op = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 223;
	                    this.expr(16);
	                    break;

	                case 2:
	                    localctx = new BinaryAddContext(this, new ExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, VisLangParser.RULE_expr);
	                    this.state = 224;
	                    if (!( this.precpred(this._ctx, 14))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 14)");
	                    }
	                    this.state = 225;
	                    localctx.op = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(_la===12 || _la===13)) {
	                        localctx.op = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 226;
	                    this.expr(15);
	                    break;
